[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game/ui/ActionMap.gd" type="Script" id=1]

[node name="ActionMap" type="PanelContainer"]
margin_right = 804.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 797.0
margin_bottom = 27.0

[node name="ActionKeyButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 19.0
margin_bottom = 20.0
text = "a"

[node name="ActionNameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 23.0
margin_top = 3.0
margin_right = 23.0
margin_bottom = 17.0

[connection signal="pressed" from="HBoxContainer/ActionKeyButton" to="." method="_on_ActionKeyButton_pressed"]
